import "Commands/Value.proto";

option java_outer_classname="MessageProtocol";
package Alachisoft.NCache.Common.Protobuf;
message Message {
	optional string messageId = 1;
	optional Value payload = 2;
	optional int32 flag = 3;
	optional int64 creationTime = 4;
	optional int64 expirationTime=5;
	optional int32 deliveryOption = 6;
	optional int32 subscriptionType = 7;
	optional int32 messageRemoveReason = 8;
	repeated string recipientList=9;
}